[package]
name = "raymarching"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixelated = "0.1.0"
glam = "0.24.0"
noise = "0.8.2"
image = { version = "0.24", default-features = false, features = [
    "png",
    "jpeg",
] }
tokio = { version = "1.28.1", features = ["full"] }
pollster = "0.3.0"
rayon = "1.7.0"

# [profile.release]
# debug = true
